Resolved warning messages